--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-document-picker": "^9.1.1",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-image-crop-picker": "^0.40.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.8.2",
