--- a/package.json
+++ b/package.json
@@ -17,16 +17,20 @@
     "@react-navigation/drawer": "^6.6.7",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "axios": "^1.6.8",
     "react": "18.2.0",
     "react-native": "0.73.4",
+    "react-native-android-sms-listener": "^0.8.0",
     "react-native-document-picker": "^9.1.1",
     "react-native-elements": "^3.4.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.10.3",
     "react-native-onesignal": "^5.0.6",
+    "react-native-permissions": "^4.1.5",
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
