--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DriverTaxi",
+  "name": "OnwerTaxiPartner",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -22,6 +22,7 @@
     "react-native": "0.73.4",
     "react-native-android-sms-listener": "^0.8.0",
     "react-native-document-picker": "^9.1.1",
+    "react-native-element-dropdown": "^2.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.15.0",
