--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -117,6 +117,7 @@ dependencies {
     implementation("com.facebook.react:react-android")
     implementation("com.facebook.react:flipper-integration")
     implementation project(':react-native-vector-icons')
+    implementation('com.onesignal:OneSignal:[5.0.0, 5.99.99]')
     if (hermesEnabled.toBoolean()) {
         implementation("com.facebook.react:hermes-android")
     } else {
