--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-sim-cards-manager": "^1.0.21",
+    "react-native-sms-retriever": "^1.1.1",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
